subdomain-routing/api-vs.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: api-vs-palaven
spec:
  hosts:
  - "palaven.citadelnet.local"
  gateways:
  - main-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: backend
        port:
          number: 8080


apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: api-vs-tuchanka
spec:
  hosts:
  - "tuchanka.citadelnet.local"
  gateways:
  - main-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: backend
        port:
          number: 8080
